--- a/SithAcademy/SithAcademy.Data.Models/SithAcademy.Data.Models.csproj
+++ b/SithAcademy/SithAcademy.Data.Models/SithAcademy.Data.Models.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SithAcademy.Common\SithAcademy.Common.csproj" />
+  </ItemGroup>
+
 </Project>
