--- a/SithAcademy/SithAcademy.Services.Data/SithAcademy.Services.Data.csproj
+++ b/SithAcademy/SithAcademy.Services.Data/SithAcademy.Services.Data.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\SithAcademy.Common\SithAcademy.Common.csproj" />
     <ProjectReference Include="..\SithAcademy.Data.Models\SithAcademy.Data.Models.csproj" />
     <ProjectReference Include="..\SithAcademy.Data\SithAcademy.Data.csproj" />
+    <ProjectReference Include="..\SithAcademy.Services.Data.Models\SithAcademy.Services.Data.Models.csproj" />
     <ProjectReference Include="..\SithAcademy.Web.ViewModels\SithAcademy.Web.ViewModels.csproj" />
   </ItemGroup>
 
