--- a/SithAcademy/SithAcademy.Web.Infrastructure/SithAcademy.Web.Infrastructure.csproj
+++ b/SithAcademy/SithAcademy.Web.Infrastructure/SithAcademy.Web.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SithAcademy.Data.Models\SithAcademy.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
