--- a/SithAcademy/SithAcademy/SithAcademy.Web.csproj
+++ b/SithAcademy/SithAcademy/SithAcademy.Web.csproj
@@ -45,4 +45,8 @@
     <None Include="Views\Trial\_ResourcePreviewPartial.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\ViewModels\" />
+  </ItemGroup>
+
 </Project>
