--- a/SithAcademy/SithAcademy.Services.Data/SithAcademy.Services.Data.csproj
+++ b/SithAcademy/SithAcademy.Services.Data/SithAcademy.Services.Data.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlSanitizer" Version="8.0.692" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SithAcademy.Common\SithAcademy.Common.csproj" />
     <ProjectReference Include="..\SithAcademy.Data.Models\SithAcademy.Data.Models.csproj" />
     <ProjectReference Include="..\SithAcademy.Data\SithAcademy.Data.csproj" />
     <ProjectReference Include="..\SithAcademy.Services.Data.Models\SithAcademy.Services.Data.Models.csproj" />
-    <ProjectReference Include="..\SithAcademy.Services.Infrastructure\SithAcademy.Services.Infrastructure.csproj" />
     <ProjectReference Include="..\SithAcademy.Web.ViewModels\SithAcademy.Web.ViewModels.csproj" />
   </ItemGroup>
 
